# Logging

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  buffer.cpp  buffer.h  logging.cpp  logging.h  main.cpp
examples/: example1.cpp
include/: logging.h
src/: logging.cpp
